cswap/src/snapshots/cswap__parser__tests__func_snap.snap
---
source: cswap/src/parser.rs
expression: "define_func(\"(define-fun foo ((a Real) (b String)) Int 7)\")"
---
Ok(
    (
        "",
        (
            Token(
                "foo",
            ),
            [
                (
                    RefCell {
                        value: Var(
                            "a",
                        ),
                    },
                    RefCell {
                        value: Dec,
                    },
                ),
                (
                    RefCell {
                        value: Var(
                            "b",
                        ),
                    },
                    RefCell {
                        value: UserDef(
                            "String",
                        ),
                    },
                ),
            ],
            UInt,
            Constant(
                RefCell {
                    value: UInt(
                        "7",
                    ),
                },
            ),
        ),
    ),
)
