cswap/src/snapshots/cswap__parser__tests__quant_snap.snap
---
source: cswap/src/parser.rs
expression: "quantifier(\"(forall ((ah Real)) (= ah 4))\")"
---
Ok(
    (
        "",
        (
            [
                (
                    RefCell {
                        value: Token(
                            "ah",
                        ),
                    },
                    RefCell {
                        value: Dec,
                    },
                ),
            ],
            BExp(
                RefCell {
                    value: Equals,
                },
                [
                    RefCell {
                        value: Symbol(
                            RefCell {
                                value: Token(
                                    "ah",
                                ),
                            },
                        ),
                    },
                    RefCell {
                        value: Constant(
                            RefCell {
                                value: UInt(
                                    "4",
                                ),
                            },
                        ),
                    },
                ],
            ),
        ),
    ),
)
