cswap/src/snapshots/cswap__parser__tests__segf_snap.snap
---
source: src/parser.rs
expression: "segf(\"timeout: the monitored command dumped core\")"
---
Ok(
    (
        "",
        "timeout: the monitored command dumped core",
    ),
)
