cswap/src/snapshots/cswap__parser__tests__sort_of_const_special_snap.snap
---
source: cswap/src/parser.rs
expression: "format!(\"{}\", c . sort ())"
---
"(_ FloatingPoint 2 3)"
