cswap/src/snapshots/cswap__parser__tests__timeout_snap.snap
---
source: cswap/src/parser.rs
expression: "timeout(\"timeout\")"
---
Ok(
    (
        "",
        "timeout",
    ),
)
