cswap/src/snapshots/cswap__parser__tests__z3o_errors_snap.snap
---
source: src/parser.rs
expression: z3o(response)
---
Ok(
    (
        "",
        [
            Unsupported,
            Comment,
            Error(
                "line 5 column 52: unknown constant emptyset",
            ),
            Error(
                "line 6 column 60: unknown function/constant member",
            ),
            Error(
                "line 7 column 71: unknown function/constant singleton",
            ),
            Error(
                "line 168 column 52: unknown function/constant smt_set_mem",
            ),
            Sat,
        ],
    ),
)
