cswap/src/snapshots/cswap__parser__tests__z3oerr_snap.snap
---
source: cswap/src/parser.rs
expression: "z3_oerror(\"(error \\\"line 6 column 52: unknown constant emptyset\\\")\")"
---
Ok(
    (
        "",
        "line 6 column 52: unknown constant emptyset",
    ),
)
